--- a/style/style.css
+++ b/style/style.css
@@ -11,20 +11,45 @@ body
     font-family: 'Pangolin';
 }
 
+img {
+    align-items: center;
+}
+
 h4 {
     background-color: dimgrey;
     text-align: right;
     color:blanchedalmond;
-    font-weight: 20;
+    font-weight: 40;
+    font-style: italic;
     height: 40px;
     width: 100%;
     padding-top: 10px;
     padding-right: 20px;
 }
 
+.img__noticia {
+    height: 50%;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.img__maps {
+    margin-top: 10px;
+    height: 500px;
+}
+
+.img_scale:hover {
+    transform: scale(1.5);
+}
+
+.img_rotateY:hover {
+    transform: skew(20deg, 10deg);
+}
+
 /* NAV */
 .nav {
-    background-color:orangered;
+    /*background-color:orangered;*/
+    background-image: linear-gradient(to top, orangered, coral);
     position: sticky;
     top: 0;
     z-index: 2;
@@ -66,13 +91,13 @@ h4 {
 }
 
 .contenedor__titulo {
-    background:coral;
+    background-image: linear-gradient(to top, rgb(168, 113, 11), coral, lightsalmon);
     text-align: left;
     grid-column-start: 1; 
     grid-column-end: 5; 
     grid-row-start: 1; 
     grid-row-end: 5;
-  }
+}
   
 .contenedor__noticia1 {
     background:snow;
@@ -108,6 +133,11 @@ h4 {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
+    animation-name: mi_animacion;
+    animation-timing-function:ease-in-out;
+    animation-iteration-count:infinite;
+    animation-duration: 5s;
+    animation-delay: 2s;
 }
 
 .section h2 {
@@ -121,6 +151,31 @@ h4 {
     padding-top: 20px;
     padding-bottom: 40px;
     padding-left: 20px;
+}
+
+/* Animation */
+@keyframes mi_animacion {
+    0% {
+    }
+
+    25% {
+        transform: translate(50px, -25px);
+    }
+
+    50% {
+        width: 400px;
+        transform: translate(100px, -50px);
+
+    }
+    75% {
+        width: 400px;
+        transform: translate(100px, -525px);
+
+    }
+
+    100% {
+        transform: translate(100px, -100px);
+    }
 }
 
 /* FOOTER */
